--- a/portfolio.css
+++ b/portfolio.css
@@ -5,11 +5,26 @@ body
 {
 	background-color:rgba(8, 8, 16, 0.94);
 	background-image: url('images/lines.png');
-
-
+	margin:0;
+	
 }
 
-#headnav
+#header
+{
+	font-family: Gill sans, sans-serif;
+	font-weight: 900;
+	font-size: 3em;
+	color: white;
+	text-shadow: 0.08em 0.07em rgba(68, 0, 229, 0.8);
+	margin-top:0;
+	margin-bottom:0;
+	padding-left: 0.2em;
+	background-color: rgb(22, 27, 36);
+
+	
+}
+
+#navbar
 {
 	display:flex;
 	justify-content: space-between;
@@ -21,7 +36,7 @@ body
 
 }
 
-#header
+#navpage
 {
 	display:inline-block;
 	font-size:1.5em;
@@ -29,21 +44,21 @@ body
 	margin-left:1em;
 
 }
-#navbar ul
+#nav ul
 {
 	text-align: right;
 	margin-left: 1.5em;
 	margin-right: 1.5em;
 	
 }
-#navbar li
+#nav li
 {
 	display: inline;
 	font-size:1em;
 	color: #FFF4F0;
 	
 }
-#navbar a
+#nav a
 {
 	display:inline-block;
 	line-height: 2em;
