--- a/portfolio.css
+++ b/portfolio.css
@@ -20,6 +20,7 @@ body
 	margin-bottom:0;
 	padding-left: 0.2em;
 	background-color: rgb(22, 27, 36);
+	padding-top:0.1em;
 	padding-bottom:0.4em;
 	
 }
