--- a/portfolio.css
+++ b/portfolio.css
@@ -15,7 +15,7 @@ body
 	font-weight: 900;
 	font-size: 3em;
 	color: white;
-	text-shadow: 0.08em 0.07em rgba(68, 0, 229, 0.8);
+	text-shadow: 0.08em 0.07em 0.04em rgba(68, 0, 229, 0.8);
 	margin-top:0;
 	margin-bottom:0;
 	padding-left: 0.2em;
@@ -239,6 +239,16 @@ footer
 	color:white;
 	text-shadow: 0.1em 0.1em 0.25em rgba(68, 0, 229, 0.8);
 	margin-top: 3em;
+	padding: 1em;
+	
+}
+
+#about_header
+{
+	color: #FFF4F0;
+	font-family: Bahnschrift Light, sans serif;
+	font-size:7;
+
 	
 }
 
@@ -252,4 +262,34 @@ footer
 	margin-top:3em;
 	background-color: rgba(22, 27, 36, 0.6);
 
+}
+
+#gallery
+{
+	text-align:center;
+	
+}
+.row1
+{
+	height:22em;
+	width:auto;
+	margin:0.5em;
+	border:0.4em solid rgba(68, 0, 229, 0.92);
+	
+}
+.row2
+{
+	height:19.3em;
+	width:auto;
+	margin:0.5em;
+	border:0.4em solid rgba(68, 0, 229, 0.92);
+	
+}
+.row3
+{
+	height:20.7em;
+	width:auto;
+	margin:0.5em;
+	border:0.4em solid rgba(68, 0, 229, 0.92);
+	
 }
