--- a/portfolio.css
+++ b/portfolio.css
@@ -11,6 +11,9 @@ body
 
 #header
 {
+	position:fixed;
+	z-index:1;
+	width:100%;
 	font-family: Gill sans, sans-serif;
 	font-weight: 900;
 	font-size: 3em;
@@ -27,6 +30,10 @@ body
 
 #navbar
 {
+	position:fixed;
+	z-index:1;
+	width:100%;
+	top:5.7em;
 	display:flex;
 	justify-content: space-between;
 	background-color: #A5A4FF;
@@ -74,6 +81,7 @@ body
 #maincontainer
 {
 	display: flex;
+	padding-top:10em;
 
 }
 
@@ -102,6 +110,7 @@ body
 	color: #FFF4F0;
 	margin-top:4em;
 	margin-left:3em;
+	margin-right:1em;
 	text-shadow: 0.2em 0.2em 0.5em black;
 	
 }
@@ -256,7 +265,7 @@ footer
 #aboutcontainer
 {
 	display:flex;
-	margin-top:3em;
+	padding-top:12em;
 	
 }
 
@@ -297,6 +306,12 @@ footer
 	border:0.4em solid rgba(68, 0, 229, 0.92);
 	
 }
+.row1:hover, .row2:hover, .row3:hover
+{
+	transform:scale(1.05);
+	cursor:pointer;
+	
+}
 .row2
 {
 	height:19.3em;
@@ -307,9 +322,15 @@ footer
 }
 .row3
 {
-	height:20.7em;
+	height:20.08em;
 	width:auto;
 	margin:0.5em;
 	border:0.4em solid rgba(68, 0, 229, 0.92);
+	
+}
+
+img
+{
+	color:white;
 	
 }
